@startuml
hide empty fields
hide empty methods

entity Project
{
  * id
  name
  user_name
  theme_id <<FK>>
}

entity Theme
{
  * id
  name
  user_name
  is_public
}

entity Element_Style
{
  * id
  selector
  theme_id <<FK>>
}

entity Style
{
  * id
  property
  value
  element_style_id <<FK>>
}

entity File
{
  * id
  index
  name
  project_id <<FK>>
}

Theme "1" -- "n" Element_Style
Element_Style "1" -- "n" Style
Project "1" -- "1" Theme
Project "1" -- "n" File

@enduml